tests/parser/errors/import_unknown_lang.mochi
import pythn "math" as math
